--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -1,8 +1,8 @@
 jdbc_driverLocation=E:\\Maven\\repository\\mysql\\mysql-connector-java\\5.1.6\\mysql-connector-java-5.1.6.jar
 jdbc_driverClass=com.mysql.jdbc.Driver
-jdbc_url=YOURURL
-jdbc_user=YOURUSER
-jdbc_password=YOURPASSWORD
+jdbc_url=localhost
+jdbc_user=root
+jdbc_password=root
 
 targetProject=src/main/java
 daoPackage=dao
