--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,11 @@
             <artifactId>log4j</artifactId>
             <version>${log4j-version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.4.6</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>ssm-simple</finalName>
